--- a/doc/manual-wiki/overview.wiki
+++ b/doc/manual-wiki/overview.wiki
@@ -18,7 +18,7 @@ retargeted OCaml compiler, as the bytecode provides a very stable API.
   * Lwt (**version 2.3.0** at least)
   * Menhir
 
-  [optionnal]
+  [optional]
   * deriving (**version 0.6** at least
               see: https://github.com/ocsigen/deriving)
 
@@ -52,25 +52,24 @@ Most of the OCaml standard library is supported. However,
 
 Extra libraries distributed with Ocaml (such as Thread or Str) are not
 supported in general. However,
-  * Bigarray: 1-dimensional bigarray are supported using Typed Arrays
+  * Bigarray: bigarray are supported using Typed Arrays
   * Unix: time related functions are supported
 
 Tail call is not optimized in general. However, mutually recursive
-functions are optimized.
+functions are optimized:
   * self recursive functions (when the tail calls are the function itself) are
     compiled using a loop.
   * trampolines are used otherwise.
 
-Data representation differs from the usual one, for performance
-reasons.  Most notably, integers are 32 bits (rather than 31 bits or
-63 bits) and floats are not boxed.  As a consequence, marshalling,
-polymorphic comparison, and hashing functions can yield results
-different from usual:
+Data representation differs from the usual one. Most notably,
+integers are 32 bits (rather than 31 bits or 63 bits), wich is their
+natural size in JavaScript, and floats are not boxed.  As a
+consequence, marshalling, polymorphic comparison, and hashing
+functions can yield results different from usual:
   * marshalling of floats is not supported (unmarshalling works);
   * the polymorphic hash function will not give the same results on
     datastructures containing floats;
-  * these functions may be more prone to stack overflow, as the
-    JavaScript stack is small.
+  * these functions may be more prone to stack overflow.
 
 == Contents of the distribution ==
 
