--- a/CHANGES
+++ b/CHANGES
@@ -1,5 +1,9 @@
 ===== 2.2+dev =====
 
+ * Features/Changes
+ ** Lib: remove deprecated Event_arrow
+ ** Lib: introduce tyxml subpackage
+
 ===== 2.2 (2014-05-15) =====
 
  * Features/Changes
