--- a/doc/manual-wiki/overview.wiki
+++ b/doc/manual-wiki/overview.wiki
@@ -43,7 +43,7 @@ retargeted OCaml compiler, as the bytecode provides a very stable API.
       js_of_ocaml cubes.byte
 }}}
 
-  See also [[ocamlbuild|Ocamlbuild integration]]
+  See also <<a_manual chapter="ocamlbuild" |Ocamlbuild integration>>
 
 == Features ==
 
