--- a/CHANGES
+++ b/CHANGES
@@ -1,3 +1,8 @@
+===== 2.3+dev =====
+
+ * Features/Changes
+ ** Runtime: support for num (Ryan Goulden)
+
 ===== 2.3 (2014-06-30) =====
 
  * Features/Changes
