--- a/CHANGES
+++ b/CHANGES
@@ -2,6 +2,7 @@
 
  * Features/Changes
  ** Runtime: support for num (Ryan Goulden)
+ ** Lib: initial support for Dom_svg
 
  * BugFixes
  ** Compiler: generate js files with default permission, was 0o600
