--- a/CHANGES
+++ b/CHANGES
@@ -1,3 +1,12 @@
+===== 2.4.1 + dev =====
+
+ * Features/Changes
+ ** Misc: enable safestring for OCaml 4.02
+ ** Compiler: SourceMap improvement
+ ** Compiler: remove registration of unused named value (wrt runtime)
+ ** Lib: Dom binding: *AttributeNS, *AttributeNode*
+ ** Runime: improve performence of MlString
+
 ===== 2.4.1 (2014-08-28) =====
 
  * BugFixes
