--- a/doc/manual/src/bindings.wiki
+++ b/doc/manual/src/bindings.wiki
@@ -199,7 +199,7 @@ let cast_string (x:dom_or_string Js.t) : Js.js_string Js.t Js.opt =
 
 let node_constr : Dom.node Js.t Js.constr = Js.Unsafe.global##_Node
 
-let cast_string (x:dom_or_string Js.t) : Dom.node Js.t Js.opt =
+let cast_node (x:dom_or_string Js.t) : Dom.node Js.t Js.opt =
   if instanceof x node_constr
   then Js.Unsafe.coerce x
   else Js.null
