--- a/CHANGES
+++ b/CHANGES
@@ -1,3 +1,22 @@
+===== dev (2016-01-XX) =====
+
+ * Features/Changes
+ ** Syntax: ppx_deriving
+ ** Compiler: Add custom_header ability to jsoo generate file (Edgar Aroutiounian)
+ ** Compiler: Bytecode parsing, improved performance
+ ** Lib: add geolocation API (Stéphane Legrand)
+ ** Lib: add Mutation observers API (Stéphane Legrand)
+ ** Lib: add Jstable module (Drup)
+ ** Lib: Allow to customize 'in_channel' with specific 'refiller' (Grégoire Henry)
+ ** Lib: Synchronized tyxml 3.6.0
+ 
+ * BugFixes
+ ** Tyxml_js: Discrepancy between Firefox and Chromium
+ ** Ppx: fix for merlin
+ ** Misc: fix compat with the upcoming ocaml 4.03
+ ** Misc: various small fix in lib
+ ** Runtime: Fix Big_int.square_big_int
+ 
 ===== 2.6 (2015-07-15) =====
 
  * Features/Changes
