--- a/CHANGES
+++ b/CHANGES
@@ -12,11 +12,12 @@
  
  * BugFixes
  ** Compiler: Fix compilation of the [match with exception] construct
- ** Tyxml_js: Discrepancy between Firefox and Chromium
+ ** Lib: Tyxml_js, discrepancy between Firefox and Chromium
  ** Ppx: fix for merlin
  ** Misc: fix compat with the upcoming ocaml 4.03
  ** Misc: various small fix in lib
  ** Runtime: Fix Big_int.square_big_int
+ ** Runtime: graphics, fix draw_image with transparent pixel
  
 ===== 2.6 (2015-07-15) =====
 
