--- a/doc/manual/src/library.wiki
+++ b/doc/manual/src/library.wiki
@@ -82,37 +82,9 @@ end
 
 == Syntax extension ==
 
-A syntax extension is available for manipulating object properties,
-invoking methods and creating objects.  The syntax and typing rules
-are as follows:
-
-        * Getting a property
-{{{
-            obj : <m : u prop> Js.t
-            -----------------------
-                 obj##m : u
-}}}
-        * Setting a property
-{{{
-            obj : <m : u prop> Js.t
-              e : u
-            -----------------------
-               obj##m <- e : unit
-}}}
-        * Invoking a method
-{{{
-            obj : <m : t_1 -> ... -> t_n -> u meth; ..> Js.t
-                e_i : t_i               (1 <= i <= n)
-            -------------------------------------------------
-                      obj##m(e_1, ..., e_n) : u
-}}}
-        * Creating an object
-{{{
-            constr : (t_1 -> ... -> t_n -> u Js.t) Js.constr
-            e_i : t_i               (1 <= i <= n)
-            ------------------------------------------------
-                    jsnew constr (e1, ..., en) : u
-}}}
+Two syntax extensions are provided: the <<a_api text="Ppx"|module Ppx_js>>
+one and the <<a_manual chapter="camlp4"|Camlp4>> one. This manual is written
+using the ppx extension, which we advise.
 
 == OCaml and Javascript functions ==
 
