--- a/CHANGES
+++ b/CHANGES
@@ -1,3 +1,14 @@
+===== 2.8.1 (2016-07-01) =====
+
+ * Features/Changes
+ ** Compiler: reduce memory usage for shortvar
+ ** Lib: Add optional `prefix` arg to Jsonp.call
+ ** Ppx: add ppx_driver compatibility
+
+ * Bug fixes
+ ** Lib: fix Js.object_keys, Js.export
+ ** Lib: Async, do not ignore unhandled exceptions 
+
 ===== 2.8 (2016-06-16) =====
  * Features/Changes
  ** Compiler: allow dynlink of precompiled javascript file
