--- a/CHANGES
+++ b/CHANGES
@@ -1,10 +1,15 @@
-===== 2.8.3 (2016-10-??) =====
+===== 2.8.3 (2016-11-04) =====
+
+ * Features/Changes
+ ** Runtime: complete support for 4.04
 
  * Bug fixes
  ** Compiler: fix order of javascript files
  ** Compiler: fix Javascript lexer (newline inside strings)
  ** Compiler: fix bug in closure generation
-
+ ** Compiler: fix regression in closure generation (introduced in 2.8) (#531)
+ ** Compiler: fix code generation when static evaluation is disabled
+ 
 ===== 2.8.2 (2016-09-10) =====
 
  * Features/Changes
