--- a/CHANGES
+++ b/CHANGES
@@ -1,3 +1,8 @@
+===== dev =====
+
+ * Features/Changes
+ ** Misc: use ppx instead of camlp4
+
 ===== 2.8.3 (2016-11-04) =====
 
  * Features/Changes
