--- a/doc/manual/src/camlp4.wiki
+++ b/doc/manual/src/camlp4.wiki
@@ -1,9 +1,8 @@
-= The Camlp4 syntax extension
+= Camlp4 syntax extension for Js_of_ocaml
 
 A Camlp4 syntax extension is available for manipulating object properties,
 invoking methods and creating objects.
-We advise to use the <<a_api text="Ppx"|module Ppx_js>> syntax
-extension instead.
+We advise to use the <<a_manual chapter="ppx" |Ppx>> syntax extension instead.
 
 The syntax and typing rules are as follows:
 
