--- a/CHANGES
+++ b/CHANGES
@@ -1,4 +1,4 @@
-===== 3.0.0 (2017-06-**) =====
+===== 3.0.0 (2017-06-23) - Hong Kong =====
 
  * Features/Changes
  ** Misc: switch to ppx instead of camlp4
