--- a/doc/manual/src/ppx.wiki
+++ b/doc/manual/src/ppx.wiki
@@ -60,8 +60,7 @@ object%js (self) (* Equivalent of this *)
 
   val z = 5 [@@writeonly] (* write-only prop *)
 
-  val t1 = 6 [@@optdef_return] (* optdef prop *)
-  val t2 = Js.undefined () [@@jsoo.optdef] (* optdef prop *)
+  val t1 = Js.undefined [@@jsoo.optdef] (* optdef prop *)
 
   method foo i = self##.y1 := self##.x1 + i
 end
@@ -71,8 +70,7 @@ Properties are defined with the [val] keyword. [mutable] makes the
 property writable. Properties can be annotated with attributes to change the
 default semantic.
 Attributes can be one of [readwrite], [readonly], [writeonly],
-[optdef] (constructs an ['a optdef_prop] from an ['a optdef]),
-[optdef_return] (constructs an ['a optdef_prop] from an ['a]).
+[optdef].
 
 [self] can be any identifier and will be bind
 to [this] in javascript.
@@ -80,8 +78,7 @@ to [this] in javascript.
 In this case, the object has the following type:
 <<code language="ocaml"|
     < foo : int -> unit Js.meth;
-      t1 : int Js.optdef_prop;
-      t2 : 'a Js.optdef_prop;
+      t1 : 'a Js.optdef_prop;
       x1 : int Js.readonly_prop;
       x2 : int Js.readonly_prop;
       y1 : int Js.prop;
