--- a/CHANGES
+++ b/CHANGES
@@ -1,3 +1,16 @@
+===== next (2028-09-??) - Hong Kong =====
+ * Features/Changes
+ ** Toplevel: [--toplevel] is now taken account when compilig cmo and cma.
+ ** Lib: make [Js.Unsafe.any] be [Js.Unsafe.top Js.t]
+ ** Misc: switch to dune
+ ** Misc: remove camlp4 support
+
+ * Bug fixes:
+ ** Toplevel: Fix dynlink of precompiled javascript files.
+ ** Lib: Fix encoding in Sys.set_channel_flusher (fix #686)
+ ** Runtime: fix the type of dataTransfer##.types
+ ** Runtime: add dummy implementation for caml_restore_raw_backtrace
+
 ===== 3.2.1 (2018-07-26) - Bari =====
  * Bug fixes:
  ** Misc: Fix the dependencies of the Lwt logger
