--- a/CHANGES
+++ b/CHANGES
@@ -1,7 +1,11 @@
-===== next (2028-09-??) - Hong Kong =====
+===== 3.3.0 (2018-11-26) - Hong Kong =====
  * Features/Changes
  ** Toplevel: [--toplevel] is now taken account when compilig cmo and cma.
  ** Lib: make [Js.Unsafe.any] be [Js.Unsafe.top Js.t]
+ ** Lib: Improve generation of dummy stubs (#700)
+ ** Lib: Improve detection of global object (copy@github)
+ ** Lib: Deprecate non namespaced module access
+ ** Lib: Upgrade to Tyxml 4.3.0
  ** Misc: switch to dune
  ** Misc: remove camlp4 support
 
@@ -29,10 +33,9 @@
  ** Runtime: int_of_string accepts leading '+'
  ** Runtime: fix polymorphic & hash compare on custom non-ocaml values.
  ** Runtime: fix string encoding when writing to channels.
- ** Runtime: improve mode js detection wrt filesystem. 
+ ** Runtime: improve mode js detection wrt filesystem.
 
 ===== 3.1.0 (2018-02-15) - Hong Kong =====
-
  * Features/Changes:
  ** Lib: add missing File.blob constructor (fix #630)
  ** Runtime: hash support for custom blocks
@@ -56,7 +59,6 @@
  ** Runtime: fix sys_chdir
  ** Runtime: fix fs support on windows
  ** Ppx: fix ppx_deriving_json for ocaml 4.05
- 
 
 ===== 3.0.1 (2017-11-04) - London =====
  * Features/Changes:
