--- a/CHANGES
+++ b/CHANGES
@@ -1,4 +1,4 @@
-===== 3.4.0 (2019-04-15) - Hong Kong =====
+===== 3.4.0 (2019-04-17) - Hong Kong =====
  * Features/Changes
  ** Compiler: Support reproducible builds by using BUILD_PATH_PREFIX_MAP
  ** Compiler: Remove support for ocaml < 4.02.3
@@ -18,6 +18,7 @@
  ** Compiler: fix miscompilation of Obj.is_int with a match expression
  ** Compiler: fix quadratic behaviour in findlib.ml
  ** Compiler: prevent addition with a positively-signed number from being coalesced… (#764)
+ ** Compiler: Fix: static eval of String.get (#770)
  ** Runtime: make obj_dup work on string/bytes
  ** Runtime: fix bad hash function on int64
  ** Runtime: avoid redundant conversion to string in fs_fake.js
