--- a/CHANGES
+++ b/CHANGES
@@ -1,3 +1,22 @@
+===== dev (2019-??-??) - Somewhere =====
+ * Features/Changes
+ ** Compiler: Improve testing of the compiler (Ty Overby)
+ ** Compiler: Add several macros for making the runtime easier to maintain (#771) (Ty Overby)
+ ** Compiler: Allow to emit one javascript per compilation unit (#783)
+ ** Compiler: refactoring (#781, #782, #787, #795)
+ ** Compiler: more source map location for the javascript runtime (#795)
+ ** Misc: Improve CI speed
+
+ * Bug fixes:
+ ** Compiler: don't generate source if no-source-map passed (#780)
+ ** Compiler: Fix compilation of [Array.set] to return [unit]/0 (#792)
+ ** Misc: Fix install on windows (#794)
+ ** Lib: Fix Dom_svg.createForeignObject (#756)
+ ** Runtime: Fix caml_obj_tag, causing miscompilation with lazy value (#772)
+ ** Runtime: Fix caml_ml_seek_out, caml_ml_pos_out (#779) (Shachar Itzhaky)
+ ** Runtime: caml_parse_sign_and_base to support unsigned syntax (#792) (Shachar Itzhaky)
+ ** Runtime: fix encoding when printing to stdout (#800)
+
 ===== 3.4.0 (2019-04-17) - Hong Kong =====
  * Features/Changes
  ** Compiler: Support reproducible builds by using BUILD_PATH_PREFIX_MAP
